[metadata]
name = {{PACKAGE_NAME_PLACEHOLDER}}
description = A bot to automate regular posts.
long_description_content_type = text/markdown
url = https://github.com/EmilyMcLean/LemmyPostBot
project_urls =
    Bug Tracker = https://github.com/EmilyMcLean/LemmyPostBot/issues
    Changelog = https://github.com/EmilyMcLean/LemmyPostBot/releases

[options]
package_dir =
    = postautomation
packages = find:
python_requires = >=3.6

[options.packages.find]
where=postautomation
